--- a/DataMiners_Database/DealerData_DB/DealerData_DB.csproj
+++ b/DataMiners_Database/DealerData_DB/DealerData_DB.csproj
@@ -36,6 +36,7 @@
     <Reference Include="MySql.Data, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -77,6 +78,11 @@
     <Compile Include="CustomerSearch.Designer.cs">
       <DependentUpon>CustomerSearch.cs</DependentUpon>
     </Compile>
+    <Compile Include="dataminersDealerDataDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>dataminersDealerDataDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="DealerData.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -95,6 +101,9 @@
     <EmbeddedResource Include="CarSearch.resx">
       <DependentUpon>CarSearch.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="CustomerSearch.resx">
+      <DependentUpon>CustomerSearch.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="DealerData.resx">
       <DependentUpon>DealerData.cs</DependentUpon>
     </EmbeddedResource>
@@ -107,6 +116,17 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="dataminersDealerDataDataSet.xsc">
+      <DependentUpon>dataminersDealerDataDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="dataminersDealerDataDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>dataminersDealerDataDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="dataminersDealerDataDataSet.xss">
+      <DependentUpon>dataminersDealerDataDataSet.xsd</DependentUpon>
+    </None>
     <None Include="DealerData_SQL.mysql" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
