--- a/DataMiners_Database/DealerData_DB/Properties/Settings.settings
+++ b/DataMiners_Database/DealerData_DB/Properties/Settings.settings
@@ -1,7 +1,14 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)">
-  <Profiles>
-    <Profile Name="(Default)" />
-  </Profiles>
-  <Settings />
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="DealerData_DB.Properties" GeneratedClassName="Settings">
+  <Profiles />
+  <Settings>
+    <Setting Name="dataminersDealerDataConnectionString" Type="(Connection string)" Scope="Application">
+      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
+  &lt;ConnectionString&gt;server=css475dbinstance.cs0surzhmcrb.us-east-2.rds.amazonaws.com;user id=dataminers475;password=DATAminers;persistsecurityinfo=True;database=dataminersDealerData&lt;/ConnectionString&gt;
+  &lt;ProviderName&gt;MySql.Data.MySqlClient&lt;/ProviderName&gt;
+&lt;/SerializableConnectionString&gt;</DesignTimeValue>
+      <Value Profile="(Default)">server=css475dbinstance.cs0surzhmcrb.us-east-2.rds.amazonaws.com;user id=dataminers475;password=DATAminers;persistsecurityinfo=True;database=dataminersDealerData</Value>
+    </Setting>
+  </Settings>
 </SettingsFile>
