--- a/DataMiners_Database/DealerData_DB/DealerData_DB.csproj
+++ b/DataMiners_Database/DealerData_DB/DealerData_DB.csproj
@@ -98,6 +98,9 @@
       <DependentUpon>SearchServices.cs</DependentUpon>
     </Compile>
     <Compile Include="SqlConnection.cs" />
+    <EmbeddedResource Include="AddSale.resx">
+      <DependentUpon>AddSale.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="CarSearch.resx">
       <DependentUpon>CarSearch.cs</DependentUpon>
     </EmbeddedResource>
