Add Car and Search Car
This commit includes the implementation of the Add Cars and Search Cars
features. The Search Cars feature includes searching for a car by VIN
number, searching for all car with a given make, model, and year,
searching for all cars with a sale price less than a given price and
searching for all the features of a car with a given VIN number.

--- a/DataMiners_Database/DealerData_DB/DealerData_DB.csproj
+++ b/DataMiners_Database/DealerData_DB/DealerData_DB.csproj
@@ -98,6 +98,9 @@
       <DependentUpon>SearchServices.cs</DependentUpon>
     </Compile>
     <Compile Include="SqlConnection.cs" />
+    <EmbeddedResource Include="AddCars.resx">
+      <DependentUpon>AddCars.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="AddSale.resx">
       <DependentUpon>AddSale.cs</DependentUpon>
     </EmbeddedResource>
